--- a/404.html
+++ b/404.html
@@ -1,25 +1,10 @@
 ---
-permalink: /404.html
 layout: default
+title: Page introuvable
+permalink: /404.html
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="container--404-page margin--page-edge">
+  <h2 class="text--bold title--margin-bottom">Désolé, cette page est introuvable</h2>
+  <a href="/" class="text--link">Retournez à l'acceuil</a>
 </div>
